fix broken css

--- a/src/bill_splitter.css
+++ b/src/bill_splitter.css
@@ -65,7 +65,7 @@
 		}
 
 /* Firefox */
-.inputNumber] {
+.inputNumber {
   -moz-appearance: textfield;
 }
 		
@@ -180,7 +180,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 20px;
-				width: 50vw;
+				width: 70vw;
 			}
 			.SideBar1, .SideBar2{
 				flex: 1;
